[gd_scene load_steps=16 format=2]

[ext_resource path="res://Juego/Metetoritos/MeteoritoSpawner.tscn" type="PackedScene" id=1]
[ext_resource path="res://Juego/Metetoritos/SectorMeteoritos.gd" type="Script" id=2]
[ext_resource path="res://Juego/Metetoritos/AlertMeteo.ogg" type="AudioStream" id=3]
[ext_resource path="res://Juego/Fuente/Advertencia.ttf" type="DynamicFontData" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10.4593, 539.643 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10.6287, 540.765 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 969.159, 11.4439 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 963.014, 10 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 13.7369, 1142.53 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 16.2511, 1124.55 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 1663.51, 42.4063 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 1727.24, 17.4904 )

[sub_resource type="DynamicFont" id=9]
size = 85
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=10]
resource_name = "Default"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/ColorRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.976471 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AdvertenciaSFX:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AdvertenciaSFX:volume_db")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -26.5742 ]
}

[sub_resource type="Animation" id=11]
resource_name = "advertencia"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/ColorRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.976471 ), Color( 1, 1, 1, 0.0196078 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AdvertenciaSFX:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AdvertenciaSFX:volume_db")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 3, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -12.156, -37.144, -50.65 ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("SpawnTimer")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ -1 ],
"method": "start"
} ]
}

[node name="SectorMeteoritos" type="Node2D"]
script = ExtResource( 2 )
intervalo_spawn = 1.0

[node name="BordesNavePlayer" type="Node2D" parent="."]

[node name="BordeIzquierdo" type="StaticBody2D" parent="BordesNavePlayer"]
position = Vector2( -960, 0 )
collision_layer = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="BordesNavePlayer/BordeIzquierdo"]
modulate = Color( 0.0117647, 0.996078, 0.466667, 1 )
shape = SubResource( 1 )

[node name="BordeDerecho" type="StaticBody2D" parent="BordesNavePlayer"]
position = Vector2( 960, 0 )
collision_layer = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D2" type="CollisionShape2D" parent="BordesNavePlayer/BordeDerecho"]
modulate = Color( 0, 1, 0.552941, 1 )
shape = SubResource( 2 )

[node name="BordeSuperior" type="StaticBody2D" parent="BordesNavePlayer"]
position = Vector2( 0, -540 )
collision_layer = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D3" type="CollisionShape2D" parent="BordesNavePlayer/BordeSuperior"]
modulate = Color( 0.0196078, 0.988235, 0.556863, 1 )
shape = SubResource( 3 )

[node name="BordeInferior" type="StaticBody2D" parent="BordesNavePlayer"]
position = Vector2( 0, 540 )
collision_layer = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D4" type="CollisionShape2D" parent="BordesNavePlayer/BordeInferior"]
modulate = Color( 0, 1, 0.486275, 1 )
position = Vector2( 10.2669, -0.69989 )
shape = SubResource( 4 )

[node name="DetectorFueraZona" type="Node2D" parent="."]

[node name="DetectorIzquierda" type="Area2D" parent="DetectorFueraZona"]
position = Vector2( -1417.79, -3.61852 )
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectorFueraZona/DetectorIzquierda"]
modulate = Color( 1, 0.188235, 1, 1 )
position = Vector2( -203.77, 0 )
shape = SubResource( 5 )

[node name="DetectorDerecho" type="Area2D" parent="DetectorFueraZona"]
position = Vector2( 1453.23, -6.6823 )
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectorFueraZona/DetectorDerecho"]
modulate = Color( 0.0623322, 0.184637, 0.839844, 1 )
position = Vector2( 173.804, 0 )
shape = SubResource( 6 )

[node name="DetectorSuperior" type="Area2D" parent="DetectorFueraZona"]
position = Vector2( -5.03979, -854.643 )
collision_layer = 2
collision_mask = 4
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectorFueraZona/DetectorSuperior"]
modulate = Color( 0.0784314, 0.266667, 0.894118, 1 )
position = Vector2( 5.99316, -257.709 )
shape = SubResource( 7 )

[node name="DetectorInferior" type="Area2D" parent="DetectorFueraZona"]
position = Vector2( -14.8362, 916.765 )
collision_layer = 4
collision_mask = 4
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectorFueraZona/DetectorInferior"]
modulate = Color( 0.0862745, 0.188235, 0.858824, 1 )
position = Vector2( 41.9526, 215.756 )
shape = SubResource( 8 )

[node name="Spawners" type="Node2D" parent="."]

[node name="MeteoritoSpawner" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( -1150, 0 )
direccion = Vector2( 2, -1 )

[node name="MeteoritoSpawner2" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 1150, 0 )
direccion = Vector2( 2, 1 )

[node name="MeteoritoSpawner3" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 0, -720 )
direccion = Vector2( -2, 1 )

[node name="MeteoritoSpawner4" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 0, 720 )
direccion = Vector2( 2, -1 )

[node name="MeteoritoSpawner5" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( -1150, -720 )
direccion = Vector2( 2, 1 )

[node name="MeteoritoSpawner6" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 1150, 720 )
direccion = Vector2( -2, -1 )

[node name="MeteoritoSpawner7" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( -1150, 720 )
direccion = Vector2( 2, -1 )

[node name="MeteoritoSpawner8" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 1150, -720 )
direccion = Vector2( -2, 1 )

[node name="MeteoritoSpawner9" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( -1156.35, -360 )
direccion = Vector2( 2, 1 )

[node name="MeteoritoSpawner10" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( -575, -720 )
direccion = Vector2( 2, 1 )

[node name="MeteoritoSpawner11" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 575, 720 )
direccion = Vector2( -2, -1 )

[node name="MeteoritoSpawner12" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( -575, 720 )
direccion = Vector2( 2, -1 )

[node name="MeteoritoSpawner13" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 575, -720 )
direccion = Vector2( -2, 1 )

[node name="MeteoritoSpawner14" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 1150, -360 )
direccion = Vector2( -2, 1 )

[node name="MeteoritoSpawner15" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( -1150, 360 )
direccion = Vector2( 2, -1 )

[node name="MeteoritoSpawner16" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 1150, 360 )
direccion = Vector2( -2, -1 )

[node name="Camera2D" type="Camera2D" parent="."]
rotating = true
current = true

[node name="SpawnTimer" type="Timer" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
modulate = Color( 1, 1, 1, 0.410164 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.603922, 0.0980392, 0.0980392, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/ColorRect"]
modulate = Color( 1, 0.992157, 0.992157, 1 )
margin_left = 127.635
margin_top = 399.762
margin_right = 2798.63
margin_bottom = 683.762
custom_fonts/font = SubResource( 9 )
custom_colors/font_color_shadow = Color( 0.439216, 0.0117647, 0.0117647, 1 )
custom_constants/shadow_offset_x = 10
text = "Advertencia!!! 
Lluvia de metoritos inmitentes"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "advertencia"
anims/Default = SubResource( 10 )
anims/advertencia = SubResource( 11 )

[node name="AdvertenciaSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -37.144
bus = "SFX"
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
